--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ padding-top: 1rem;
    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
    7px 7px 20px 0px rgba(0,0,0,.1),
    4px 4px 5px 0px rgba(0,0,0,.1);
-  outline: none;
+  outline: none; 
 }
 .btn-3 {
   background: rgb(0,172,238);
@@ -89,7 +89,7 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   position: relative;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 100%; 
 }
 .btn-3:before,
 .btn-3:after {
@@ -128,7 +128,8 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   left: 0;
   bottom: 0;
    background: rgba(2,126,251,1);
-  transition: all 0.3s ease;
+  transition: all 0.3s ease; 
+  
 }
 .btn-3 span:before {
   width: 2px;
@@ -144,3 +145,42 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
 .btn-3 span:hover:after {
   width: 100%;
 }
+/*FIM DO BUTTON*/ 
+.container-text { 
+  padding: 150px 0 0 130px;
+}  
+
+.text h3{ 
+  font-size: 16px;
+} 
+.text h1 {  
+  color: rgba(2,126,251,1)
+}  
+.text p { 
+  font-size: 10px; 
+  font-weight: 300; 
+  margin-top: 10px;
+} 
+
+.redes-sociais a{ 
+  color: rgba(2,126,251,1); 
+  padding: 3px; 
+  margin-top: 5px;
+} 
+.btn-sobremim { 
+  margin-top: 10px;
+} 
+/* Estilo inicial dos ícones de redes sociais */
+.redes-sociais {
+  font-size: 150%; /* Tamanho inicial dos ícones */
+  transition: transform 0.3s ease; /* Transição suave para a transformação */
+}
+
+/* Estilo ao passar o cursor por cima */
+.fa-linkedin:hover {
+  font-size: 140%;
+} 
+.fa-github:hover {
+  font-size: 140%;
+} 
+
